# self-stabilizing-cloud

./: .gitmodules  README.md
self-stabilizing-coded-atomic-storage/: README.md
self-stabilizing-communication-abstractions/application/: Cargo.toml  README.md
self-stabilizing-communication-abstractions/application/src/: main.rs  mediator.rs  merge.rs  scd.rs  settings.rs  urb.rs
self-stabilizing-communication-abstractions/application/src/communicator/: dccp.rs  dccp_communicator.rs  udp_communicator.rs
self-stabilizing-communication-abstractions/application/src/merge/: communicator.rs  counter.rs  hbfd.rs  mergednode.rs  scd.rs  snapshot.rs  thetafd.rs  urb.rs  utils.rs
self-stabilizing-communication-abstractions/application/src/ping_check/: main.rs
self-stabilizing-communication-abstractions/application/src/scd/: algorithm5.rs  algorithm6.rs  messages.rs  pattern3.rs  pattern4.rs  scd.rs  types.rs
self-stabilizing-communication-abstractions/application/src/urb/: messages.rs  types.rs  urb_node.rs
self-stabilizing-emulation-of-state-machine-replication/application/: Cargo.toml  README.md
self-stabilizing-emulation-of-state-machine-replication/application/src/: communicator.rs  configuration_manager.rs  main.rs  mediator.rs  settings.rs  terminal_output.rs  urb.rs
self-stabilizing-emulation-of-state-machine-replication/application/src/communicator/: dccp.rs  dccp_communicator.rs  udp_communicator.rs
self-stabilizing-emulation-of-state-machine-replication/application/src/urb/: hbfd.rs  messages.rs  thetafd.rs  types.rs  urb_node.rs
(+111 files in other folders)
